Commented some section temporarily

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Android Software Engineer specializing in Kotlin, Jetpack Compose, and modern Android development. View my projects and experience.">
     <meta name="keywords" content="Android Developer, Kotlin, Jetpack Compose, Mobile App Development, Software Engineer">
     <meta name="author" content="Farzad Azimipoor">
-    
+
     <!-- Open Graph -->
     <meta property="og:title" content="Farzad Azimipoor - Android Software Engineer">
     <meta property="og:description" content="Android Software Engineer specializing in Kotlin, Jetpack Compose, and modern Android development.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://farzadazimipoor.github.io">
-    
+
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📱</text></svg>">
 
@@ -39,9 +39,9 @@
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-                <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li>
+                <!-- <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li> -->
+                <!-- <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li> -->
+                <!-- <li class="nav-item"><a class="nav-link" href="#testimonials">Testimonials</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                 <li class="nav-item d-flex align-items-center">
                     <div class="theme-switch ms-3">
@@ -67,7 +67,7 @@
             <h1 class="display-4 fw-bold">Hi, I’m <span class="text-success">Farzad</span></h1>
             <p class="lead">I build fast, scalable Android apps with clean architecture and delightful UX.</p>
             <div class="mt-4">
-                <a href="#projects" class="btn btn-success btn-lg me-2"><i class="fa-solid fa-rocket"></i> View Projects</a>
+                <!-- <a href="#projects" class="btn btn-success btn-lg me-2"><i class="fa-solid fa-rocket"></i> View Projects</a> -->
                 <a href="https://github.com/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light btn-lg"><i
                         class="fa-brands fa-github"></i> GitHub</a>
             </div>
@@ -83,8 +83,8 @@
                     <p>I’m an Android Software Engineer focused on building reliable, scalable apps. I care about UI/UX,
                         testability, and modern Android practices like Jetpack Compose, Kotlin Coroutines, and Clean
                         Architecture.</p>
-                    <a href="data/resume.pdf" class="btn btn-outline-success me-2" download>Download Resume</a>
-                    <a href="#contact" class="btn btn-success">Hire Me</a>
+                    <!-- <a href="data/resume.pdf" class="btn btn-outline-success me-2" download>Download Resume</a> -->
+                    <a href="#contact" class="btn btn-success">Get In Touch</a>
                 </div>
                 <div class="col-md-6 text-center mt-4 mt-md-0">
                     <img src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?w=600&auto=format"
@@ -172,15 +172,15 @@
     </section>
 
     <!-- Projects -->
-    <section id="projects" class="py-5 bg-gradient-dark animate-on-scroll">
+    <!-- <section id="projects" class="py-5 bg-gradient-dark animate-on-scroll">
         <div class="container">
             <h2 class="text-center mb-5">Featured Projects</h2>
             <div id="projectGrid" class="row g-4"></div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Experience -->
-    <section id="experience" class="bg-dots py-5 animate-on-scroll">
+    <!-- <section id="experience" class="bg-dots py-5 animate-on-scroll">
         <div class="container">
             <h2 class="text-center mb-5">Career Journey</h2>
             <div class="timeline">
@@ -277,10 +277,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Testimonials -->
-    <section id="testimonials" class="py-5 bg-gradient-dark animate-on-scroll">
+    <!-- <section id="testimonials" class="py-5 bg-gradient-dark animate-on-scroll">
         <div class="container">
             <h2 class="text-center mb-5 text-white">What Colleagues Say</h2>
             <div class="row g-4">
@@ -319,7 +319,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact -->
     <section id="contact" class="py-5 bg-gradient-light animate-on-scroll">
@@ -350,9 +350,9 @@
                 <a href="https://github.com/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="github" title="GitHub">
                     <i class="fa-brands fa-github"></i>
                 </a>
-                <a href="https://www.linkedin.com/in/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="linkedin" title="LinkedIn">
+                <!-- <a href="https://www.linkedin.com/in/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="linkedin" title="LinkedIn">
                     <i class="fa-brands fa-linkedin"></i>
-                </a>
+                </a> -->
             </div>
         </div>
     </section>
