--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Farzad Azimipoor - Android Software Engineer Portfolio</title>
+    <title>Farzad Azimipour - Android Software Engineer Portfolio</title>
     <meta name="description" content="Android Software Engineer specializing in Kotlin, Jetpack Compose, and modern Android development. View my projects and experience.">
     <meta name="keywords" content="Android Developer, Kotlin, Jetpack Compose, Mobile App Development, Software Engineer">
-    <meta name="author" content="Farzad Azimipoor">
+    <meta name="author" content="Farzad Azimipour">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Farzad Azimipoor - Android Software Engineer">
+    <meta property="og:title" content="Farzad Azimipour - Android Software Engineer">
     <meta property="og:description" content="Android Software Engineer specializing in Kotlin, Jetpack Compose, and modern Android development.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://farzadazimipoor.github.io">
+    <meta property="og:url" content="https://farzadazimipour.github.io">
 
     <!-- Favicon -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📱</text></svg>">
@@ -63,13 +63,11 @@
     <!-- Hero -->
     <header class="bg-dark text-white text-center vh-100 d-flex flex-column justify-content-center">
         <div class="container">
-
             <h1 class="display-4 fw-bold">Hi, I’m <span class="text-success">Farzad</span></h1>
             <p class="lead">I build fast, scalable Android apps with clean architecture and delightful UX.</p>
             <div class="mt-4">
                 <!-- <a href="#projects" class="btn btn-success btn-lg me-2"><i class="fa-solid fa-rocket"></i> View Projects</a> -->
-                <a href="https://github.com/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light btn-lg"><i
-                        class="fa-brands fa-github"></i> GitHub</a>
+                <a href="https://github.com/farzadazimipour" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-github"></i> GitHub</a>
             </div>
         </div>
     </header>
@@ -87,8 +85,7 @@
                     <a href="#contact" class="btn btn-success">Get In Touch</a>
                 </div>
                 <div class="col-md-6 text-center mt-4 mt-md-0">
-                    <img src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?w=600&auto=format"
-                         class="img-fluid rounded shadow" alt="Laptop with Android Studio">
+                    <img src="https://images.unsplash.com/photo-1526378722484-bd91ca387e72?w=600&auto=format" class="img-fluid rounded shadow" alt="Laptop with Android Studio">
                 </div>
             </div>
         </div>
@@ -102,9 +99,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body text-center">
-                            <div class="mb-3">
-                                <i class="fa-brands fa-android fa-3x text-success"></i>
-                            </div>
+                            <div class="mb-3"><i class="fa-brands fa-android fa-3x text-success"></i></div>
                             <h5 class="card-title">Mobile Development</h5>
                             <div class="skill-badges">
                                 <span class="skill-badge">Android SDK</span>
@@ -334,20 +329,16 @@
                     <input type="email" name="email" class="form-control" placeholder="you@example.com" required>
                 </div>
                 <div class="col-12">
-                    <textarea name="message" rows="4" class="form-control" placeholder="Tell me about your project…"
-                              required></textarea>
+                    <textarea name="message" rows="4" class="form-control" placeholder="Tell me about your project…" required></textarea>
                 </div>
                 <div class="col-10">
-                    <button class="btn btn-success btn-lg" type="submit"><i class="fa-regular fa-paper-plane"></i> Send
-                    </button>
+                    <button class="btn btn-success btn-lg" type="submit"><i class="fa-regular fa-paper-plane"></i> Send</button>
                 </div>
             </form>
             <div id="formMessage" class="mt-3" style="display: none;"></div>
             <div class="mt-4 social-links">
-                <a href="mailto:farzad.azimipoor@gmail.com" class="email" title="Email">
-                    <i class="fa-regular fa-envelope"></i>
-                </a>
-                <a href="https://github.com/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="github" title="GitHub">
+                <a href="mailto:farzad.azimipoor@gmail.com" class="email" title="Email"><i class="fa-regular fa-envelope"></i></a>
+                <a href="https://github.com/farzadazimipour" target="_blank" rel="noopener noreferrer" class="github" title="GitHub">
                     <i class="fa-brands fa-github"></i>
                 </a>
                 <!-- <a href="https://www.linkedin.com/in/farzadazimipoor" target="_blank" rel="noopener noreferrer" class="linkedin" title="LinkedIn">
