Updated bio information

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <header class="bg-dark text-white text-center vh-100 d-flex flex-column justify-content-center">
         <div class="container">
             <h1 class="display-4 fw-bold">Hi, I’m <span class="text-success">Farzad</span></h1>
-            <p class="lead">I build fast, scalable Android apps with clean architecture and delightful UX.</p>
+            <p class="lead">I build scalable, high-performance Android apps with clean architecture and thoughtful user experiences</p>
             <div class="mt-4">
                 <!-- <a href="#projects" class="btn btn-success btn-lg me-2"><i class="fa-solid fa-rocket"></i> View Projects</a> -->
                 <a href="https://github.com/farzadazimipour" target="_blank" rel="noopener noreferrer" class="btn btn-outline-light btn-lg"><i class="fa-brands fa-github"></i> GitHub</a>
@@ -78,9 +78,8 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2 class="mb-4">About Me</h2>
-                    <p>I’m an Android Software Engineer focused on building reliable, scalable apps. I care about UI/UX,
-                        testability, and modern Android practices like Jetpack Compose, Kotlin Coroutines, and Clean
-                        Architecture.</p>
+                    <p>I’m an Android Engineer with 8+ years of experience building reliable, maintainable, and scalable mobile applications.</p>
+                    <p>I focus on modern Android practices including Kotlin, Jetpack Compose, Coroutines, and Clean Architecture, with strong attention to UI/UX, testability, and performance. I enjoy modernizing legacy systems, optimizing large codebases, and collaborating with teams to deliver impactful mobile experiences.</p>
                     <!-- <a href="data/resume.pdf" class="btn btn-outline-success me-2" download>Download Resume</a> -->
                     <a href="#contact" class="btn btn-success">Get In Touch</a>
                 </div>
