--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="row align-items-center">
                 <div class="col-md-6">
                     <h2 class="mb-4">About Me</h2>
-                    <p>I’m an Android Engineer with 8+ years of experience building reliable, maintainable, and scalable mobile applications.</p>
+                    <p>I’m an Android Software Engineer with 8+ years of experience building reliable, maintainable, and scalable mobile applications.</p>
                     <p>I focus on modern Android practices including Kotlin, Jetpack Compose, Coroutines, and Clean Architecture, with strong attention to UI/UX, testability, and performance. I enjoy modernizing legacy systems, optimizing large codebases, and collaborating with teams to deliver impactful mobile experiences.</p>
                     <!-- <a href="data/resume.pdf" class="btn btn-outline-success me-2" download>Download Resume</a> -->
                     <a href="#contact" class="btn btn-success">Get In Touch</a>
